2001-10-26	Victor V. Vengerov <vvv@oktet.ru>

	* src/imfs/imfs_load_tar.c: Minor modification so this will
	compile with gcc-2.95.3 with the arguments "-m5200 -O4".

2001-10-16	Chris Johns <ccj@acm.org>

	* imfs/imfs_load_tar.c: Changed the code around to remove an
	internal compiler error on the Coldfire target.

2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
	* configure.in: Remove.
	* configure.ac: New file, generated from configure.in by autoupdate.

2001-10-10	Joel Sherrill <joel@OARcorp.com>

	* src/imfs/imfs_getchild.c: Correct length of static string
	as reported by Ibragimov Ilya <ibr@oktet.ru>.

2001-09-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/imfs/Makefile.am: Use 'PREINSTALL_FILES ='.

2001-09-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/imfs/Makefile.am: Revamp INCLUDES handling to make automake-1.5
	happy.

2001-08-09	Fernando-Ruiz Casas <correo@fernando-ruiz.com>

	* src/imfs/imfs_eval.c: The CD_UP problem in imfs_eval has been
	touched. The order of the questions is the key.

2001-07-06	Thomas Doerfler <Thomas.Doerfler@imd-systems.de>

	* src/imfs/deviceio.c: Make sure errno gets set to reflect
	the status from the driver.

2001-05-25	Joel Sherrill <joel@OARcorp.com>

 	* src/imfs/imfs_initsupp.c: Create the root node with the
	desired permissions.  Nodes should be created with the right
	permissions because chmod() is not supported by the miniIMFS
	so changing after creation is not possible.

2001-04-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.in: Add [-ansi -fasm] to RTEMS_PROG_CC_FOR_TARGET.

2001-04-24	Joel Sherrill <joel@OARcorp.com>

 	* src/imfs/memfile.c (memfile_open): Did not set iop->size
	and thus the value was incorrect.  Before this field was cleared,
	this resulted in the value from the last time that IOP was used
	being still in place.  Discovered by  Andrew Bythell
	<abythell@nortelnetworks.com>.

2001-04-20	Joel Sherrill <joel@OARcorp.com>
